@@ -1,5 +1,9 @@
 2006-06-13 Sandro Santilli <strk@refractions.net>
 
+	* source/headers/geos/geomgraph/GeometryGraph.h: changed
+	GeometryGraph::lineEdgeMap set comparison function to
+	be pointer-based. Should be safe and much faster. Available
+	tests all succeed.
 	* source/geom/Geometry.cpp: added self comparison check
 	in compareTo().
 	
